--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuesax3": "^4.0.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
