--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "material-icons": "^1.11.10",
     "vue": "^3.2.13",
     "vuesax3": "^4.0.23"
   },
